bugfixes on/off heap arrays
- no need to read array data from heap if array is already on heap
- do not use hardcoded ints